// Copyright 2025 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package feedwire;

option optimize_for = LITE_RUNTIME;

message ErrorInfo {
  message MetadataEntry {
    string key = 1;
    string value = 2;
  }
  string reason = 1;
  string domain = 2;
  repeated MetadataEntry metadata = 3;
}
